WebProcess hangs loading eff.org (Waiting forever on a sync XHR, NetworkProcess unable to service it). <rdar://problem/14112329> and https://bugs.webkit.org/show_bug.cgi?id=117842

Reviewed by Alexey Proskuryakov.

* NetworkProcess/HostRecord.cpp:
(WebKit::removeLoaderFromQueue): Utility to clear a Loader out of a LoaderQueue.
(WebKit::HostRecord::removeLoader): Use removeLoaderFromQueue, and also try to clear the loader from m_syncLoadersPending.
(WebKit::HostRecord::servePendingRequestsForQueue): Small refactoring/cleanup.
(WebKit::HostRecord::limitsRequests): Change so that if the number of loaders in flight is exactly equal to the limit, then
  allow serving a synchronous loader to go exactly one beyond the limit.
* NetworkProcess/HostRecord.h:

Make the static maxRequestsInFlightPerHost a member of the NetworkResourceLoadScheduler, instead:
* NetworkProcess/NetworkResourceLoadScheduler.cpp:
(WebKit::NetworkResourceLoadScheduler::NetworkResourceLoadScheduler):
(WebKit::NetworkResourceLoadScheduler::hostForURL):
* NetworkProcess/NetworkResourceLoadScheduler.h:

* NetworkProcess/mac/NetworkResourceLoadSchedulerMac.mm:
(WebKit::NetworkResourceLoadScheduler::platformInitializeMaximumHTTPConnectionCountPerHost): Tell CFNetwork to allow
  7 connections per host instead of 6, but tell the scheduler that 6 is still the normal limit.

Canonical link: https://commits.webkit.org/135980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151795 268f45cc-cd09-0410-ab3c-d52691b4dbfc