Source/WebKit2/NetworkProcess/mac/NetworkResourceLoadSchedulerMac.mm
@@ -37,13 +37,15 @@ using namespace WebCore;
 
 namespace WebKit {
 
-unsigned NetworkResourceLoadScheduler::platformInitializeMaximumHTTPConnectionCountPerHost()
+void NetworkResourceLoadScheduler::platformInitializeMaximumHTTPConnectionCountPerHost()
 {
     wkInitializeMaximumHTTPConnectionCountPerHost = WKInitializeMaximumHTTPConnectionCountPerHost;
     wkSetHTTPPipeliningMaximumPriority = WKSetHTTPPipeliningMaximumPriority;
     wkSetHTTPPipeliningMinimumFastLanePriority = WKSetHTTPPipeliningMinimumFastLanePriority;
 
-    static const unsigned preferredConnectionCount = 6;
+    // Our preferred connection-per-host limit is the standard 6, but we need to let CFNetwork handle a 7th
+    // in case a synchronous XHRs is made while 6 loads are already outstanding.
+    static const unsigned preferredConnectionCount = 7;
     static const unsigned unlimitedConnectionCount = 10000;
 
     // Always set the connection count per host, even when pipelining.
@@ -60,10 +62,13 @@ unsigned NetworkResourceLoadScheduler::platformInitializeMaximumHTTPConnectionCo
         wkSetHTTPPipeliningMinimumFastLanePriority(toHTTPPipeliningPriority(ResourceLoadPriorityMedium));
 
         // When pipelining do not rate-limit requests sent from WebCore since CFNetwork handles that.
-        return unlimitedConnectionCount;
+        m_maxRequestsInFlightPerHost = unlimitedConnectionCount;
+
+        return;
     }
 
-    return maximumHTTPConnectionCountPerHost;
+    // We've asked for one more connection per host than we intend to use in most cases so synch XHRs can bypass that limit.
+    m_maxRequestsInFlightPerHost = maximumHTTPConnectionCountPerHost - 1;
 }
 
 } // namespace WebKit
